enregistrement des modifications

--- a/R-markdown- world_airport/R-markdown- world_airport.Rmd
+++ b/R-markdown- world_airport/R-markdown- world_airport.Rmd
@@ -45,7 +45,7 @@ link-citations: yes
 #**Introduction**
 
 Les aéroports jouent un rôle central dans le transport aérien mondial, facilitant les échanges internationaux, le tourisme, les affaires et le commerce. En tant qu'infrastructures stratégiques, leur gestion et leur développement sont essentiels pour les économies locales et mondiales. Cette étude se concentre sur une base de données des aéroports du monde, qui réunit des informations détaillées sur la localisation, le type et les caractéristiques des aéroports répartis à travers différents pays.
-À travers cette analyse, nous explorerons des variables clés telles que le type d'aéroport (international, national, hélicoptère, etc.), les codes ISO des pays et leur répartition géographique d'une part avec la methode d'AFC et de l'autre part, nous allons etudier les variables comme les variables comme le revenu national(qu'on a récuperée sur une autre base de donnée puis on l'a fusionné avec la presente base de donnée),les passagers, les longueurs des pistes ainsi que les largeurs des pistes avec la methode de l'ACP. La problèmatique est de comprendre le choix des pays dans la construction des infrastructures aéroportuaires. Cela nous permettra de comprendre si les pays les plus riches investissent davantage dans les aéroports et si cela se traduit par une augmentation du nombre des passagers.
+À travers cette analyse, nous explorerons des variables clés telles que le type d'aéroport (international, national, hélicoptère, etc.), les codes ISO des pays et leur répartition géographique d'une part avec la methode d'AFC et de l'autre part, nous allons etudier les variables comme  le revenu national(qu'on a récuperée sur une autre base de donnée puis on l'a fusionné avec la presente base de donnée),les passagers, les longueurs des pistes ainsi que les largeurs des pistes avec la methode de l'ACP. La problèmatique est de comprendre le choix des pays dans la construction des infrastructures aéroportuaires. Cela nous permettra de comprendre si les pays les plus riches investissent davantage dans les aéroports et si cela se traduit par une augmentation du nombre des passagers.
 
 
 # ** Prémière partie: Application de l'AFC**
