Reorganisation de l'ACP et ses interpretations

--- a/R-markdown- world_airport/R-markdown- world_airport.Rmd
+++ b/R-markdown- world_airport/R-markdown- world_airport.Rmd
@@ -447,78 +447,62 @@ Nous remarquons à ce niveau que l'analyse se focalise sur la Chine qui explique
 
 # ** Deuxième Partie: Methode de l'ACP **
 
-## ** Section 1: Analyse Descriptive **
+L'Analyse en Composantes Principales (l'ACP) est une méthode statistique utilisée pour réduire la dimensionnalité des données tout en préservant l’information essentielle. Elle est particulièrement utile dans des contextes de données multidimensionnelles, difficiles à analyser ou à visualiser.
 
+## **Les données utilisées **
 
-### ** Section 1-1: Analyse Univariée **
+Pour cette étude, nous avons combiné plusieurs ensembles de données :
 
-Pour l'analyse ACP, nous avons décidé de combiner plusieurs ensembles de données. Le premier est l'ensemble de données « Airports », qui contient des informations sur tous les aéroports du monde. Le second contient des informations sur les codes pays ISO afin d'utiliser cette variable comme clé pour joindre les data sets. Le troisième ensemble de données contient des informations sur le revenu national par habitant de tous les pays. Le quatrième ensemble de données contient des informations sur le trafic annuel de passagers. Cependant, il est important de mentionner que nous n'avons pas pu obtenir de données sur tous les aéroports car nous aurions dû payer. Nous avons donc ajouté des informations sur le trafic provenant de Wikipedia, qui contient des informations sur les 50 principaux aéroports du monde. 
+- "Airports" – informations sur plus de 75 000 aéroports à l'échelle mondiale.
+- "Iso_table" - Codes ISO des pays – utilisés comme clé pour fusionner les données avec left_join.
+- "Income_table" - Revenu national par habitant – pour évaluer la richesse économique des pays.
+- "Passagers" – données spécifiques aux 50 principaux aéroports extraites de Wikipedia, en raison de limitations d’accès aux données complètes.
 
 Après avoir combiné et reformaté tous les ensembles de données, nous avons décidé d'effectuer une analyse ACP à partir de ces variables :
-« National.income », “runway_length_ft”, “runway_width_ft”, et “passengers”. En utilisant ces variables, nous voulions explorer la relation entre le revenu national et les infrastructures aéroportuaires. En outre, nous avons essayé de comprendre si les pays les plus riches investissent davantage dans les aéroports et si cela se traduit par un plus grand nombre de passagers.
+« National.income », “runway_length_ft”, “runway_width_ft”, et “passengers”. En utilisant ces variables, nous avons cherché à explorer les relations entre ces variables afin de déterminer si les pays les plus riches investissent davantage dans leurs aéroports et si cela se traduit par un trafic plus grand.
 
+## **Analyse des résultats**  
 
-L'analyse univariée de la variable National Income révèle une distribution fortement asymétrique, avec la majorité des observations concentrées dans les tranches de revenu les plus basses. La raison en est le grand nombre d'aéroports asiatiques présents dans la liste (Chine, Inde, Philippines). Dans ces pays, le revenu national par habitant est faible, ce qui contribue à l'asymétrie du graphique. Une proportion significative du jeu de données se situe entre 20 000 et 60 000, comme le montrent les barres les plus hautes. En revanche, très peu d'observations dépassent la tranche des 80 000, ce qui met en évidence une disparité. Cela suggère que la majorité des entités du jeu de données appartiennent à des pays ou régions ayant des revenus nationaux modestes, tandis qu'une minorité représente des économies à revenu élevé.
+L’ACP révèle que les deux premières composantes principales expliquent 69,08% de la variance totale, ce qui permet de capturer efficacement les principales tendances des données.  
 
+### Distribution des longueurs de piste  
 
+En utilisant l'analyse univarié, l’analyse visuelle met en évidence une différence marquée entre les 50 top aéroports et l’ensemble des 75 000 aéroports mondiaux. Les grandes infrastructures, notamment des pistes plus longues, sont concentrées dans les principaux aéroports, tandis que la majorité des aéroports mondiaux présentent des pistes plus courtes et homogènes. Cela signifie que les top aéroports ont des pistes plus longues, ce qui indique plusieurs observations possibles : leurs pistes sont conçues pour les avions transcontinentaux qui ont besoin de pistes plus longues pour décoller et atterrir ; ils investissent davantage dans l'infrastructure pour construire des « hubs » pour toutes sortes de vols. 
 
-La comparaison des longueurs de pistes met en évidence une nette disparité entre les grands aéroports et les petites pistes d’aviation. Les 50 principaux aéroports disposent de pistes nettement plus longues et plus homogènes, avec une médiane autour de 11 000 pieds, reflétant leur capacité à accueillir de grands avions comme les avions gros-porteurs (Boxplot No.1). En revanche, l’ensemble des 75 052 aéroports montre que la plupart des pistes sont beaucoup plus courtes, avec une médiane inférieure à 5 000 pieds, représentant des petits aérodromes régionaux, privés ou ruraux (Boxplot No.2). Cependant, le dataset "Airports" inclut également des valeurs extrêmes, avec des pistes dépassant les 30 000 pieds, correspondant aux grands aéroports internationaux. Dans l’ensemble, la distribution est fortement asymétrique, soulignant la différence entre les petites pistes et quelques grands hubs internationaux.
+### Revenu national et trafic passagers  
 
+Les graphiques des variables et des individus confirment une corrélation positive entre le revenu national et le nombre de passagers. Les pays les plus riches développent généralement de grandes infrastructures aéroportuaires pour répondre à une demande accrue en transport aérien. Toutefois, des exceptions notables apparaissent :  
+- Certains pays à revenu limité enregistrent un trafic élevé, souvent grâce à leur rôle de hubs régionaux ou à leur dépendance au tourisme.  
+- À l’inverse, des pays avec des infrastructures avancées présentent un trafic faible, suggérant des inefficacités ou une demande insuffisante. 
 
+**Important de noter** : pour une analyse plus approfondie, nous avons besoin de données sur un plus grand nombre d'aéroports, et pas seulement sur les plus importants. Cette analyse pourra donc être améliorée à l'avenir. 
 
+### Corrélation entre variables  
+La matrice de corrélation met en évidence des relations importantes :  
+- Le revenu national et le nombre de passagers sont fortement corrélés, traduisant leur interdépendance.  
+- Les dimensions des pistes (longueur et largeur) sont étroitement liées entre elles, mais elles n’entretiennent pas de relation significative avec le revenu national ou le trafic passagers. Cela montre que l’investissement dans les infrastructures ne garantit pas automatiquement une augmentation du trafic aérien. D'ailleurs, cela montre que plus la piste est longue, plus elle doit être large, ce qui est logique et peut être prouvé par cette analyse. 
 
-### ** Section 1-2: Analyse bivariée **
-
-
-
-
-## ** Section 2: Application de l'ACP **
-
-L'Analyse en Composantes Principales (ACP) est une méthode statistique utilisée pour analyser et réduire la dimensionnalité d'un jeu de données tout en préservant autant que possible l'information. Elle est souvent utilisée dans des contextes où les données sont de haute dimension, c'est-à-dire quand il y a de nombreuses variables (caractéristiques) qui peuvent être difficiles à analyser ou à visualiser.
-
-### ** Section 2-1: Graphique des individus **
-
-
-Le graphique des individus illustre la répartition des observations en fonction de ces composantes principales. Les points situés dans le quadrant supérieur droit, comme 27 (Emirats Arabes Unis) et 38 (Singapour), représentent probablement des nations riches avec des infrastructures avancées et un trafic passagers élevé, reflétant la corrélation positive entre ces variables. En revanche, des observations comme 6 et 18, situées dans le quadrant supérieur gauche, correspondent aux États Unis ayant un revenu modéré mais des infrastructures aéroportuaires atypiques qui s’écartent de la tendance générale. De manière similaire, des points comme 43 (La Chine) et 32 (Brésil) dans le quadrant inférieur droit représentent les pays avec des infrastructures importantes mais des volumes de passagers faibles, peut-être en raison d’une capacité sous-utilisée.
-
-### **Section 2-2: Graphique des variables**
-
-
-Le graphique des variables illustre visuellement ces relations. L’alignement de “National.income” avec passengers sur Dim 1 met en évidence une forte corrélation positive entre la richesse d’un pays et la demande de transport aérien. En revanche, les vecteurs représentant la longueur et la largeur des pistes sont étroitement groupés et orientés principalement sur Dim 2, ce qui suggère que les caractéristiques physiques des infrastructures sont interdépendantes mais influencées par des facteurs ne dépendant pas uniquement du revenu national. Cette séparation entre le trafic passagers lié au revenu et les caractéristiques physiques des infrastructures implique que, bien que les pays riches investissent généralement dans des aéroports plus grands et mieux équipés, l’expansion des infrastructures n’est pas toujours proportionnelle aux niveaux de revenu.
-
-Ces résultats confirment que le revenu national influence le développement des aéroports et la demande de transport aérien, mais ils mettent également en évidence une variabilité entre les pays. Par exemple, certains pays à revenu limité maintiennent des volumes de passagers relativement élevés, potentiellement en raison de leur rôle de hubs régionaux ou de leur dépendance au tourisme. D’autres disposent d’infrastructures avancées mais affichent un faible trafic passagers, suggérant des inefficacités ou une demande insuffisante.
-
-### ** Section 2-3: Histogramme des valeurs propres **
-
-
-L'histogramme des valeurs propres montre la contribution des quatre composantes principales (comp 1, comp 2, comp 3 et comp 4) à l’explication de la variance dans le jeu de données. La composante 1 capture la majeure partie de la variance, révélant les principales structures des données (comme le revenu national, le volume de passagers ou les dimensions des pistes). La composante 2 contribue également de manière significative, bien qu’à un degré moindre, en expliquant des variations complémentaires. En revanche, les composantes 3 et 4 ont des contributions nettement plus faibles, indiquant qu’elles expliquent des variations mineures. Cela suggère que les deux premières composantes suffisent pour représenter la majorité des informations du jeu de données tout en simplifiant l’analyse et la visualisation.
-
-
-# ** Conclusion **
+## Interprétation globale  
 
 Les résultats de l’ACP soulignent une relation nuancée entre la richesse, les infrastructures et le transport aérien. Bien que les pays les plus riches investissent généralement dans des infrastructures aéroportuaires et connaissent des volumes de trafic plus élevés, les écarts par rapport à ce schéma, comme la présence d’observations atypiques, suggèrent l’influence d’autres facteurs. La localisation géographique, les politiques publiques, la connectivité aérienne ou la dépendance au tourisme pourraient tous contribuer à ces variations. Une étude approfondie de ces anomalies permettrait de mieux comprendre la dynamique complexe entre le développement économique, les infrastructures aéroportuaires et les mouvements de passagers.
 
+## Perspectives futures  
+Pour aller plus loin, une analyse approfondie des outliers et des facteurs externes s’avère nécessaire. De plus, l’utilisation d’un ensemble de données plus complet, incluant un plus grand nombre d’aéroports, permettrait de confirmer ces observations et d’affiner les conclusions de cette étude.
 
 # **Annexe**
 ```{r,echo=FALSE}
 hist(data_for_pca$National.income, main="Distribution de National Income", xlab="National Income")
 ```
+L'analyse univariée de la variable National Income révèle une distribution fortement asymétrique, avec la majorité des observations concentrées dans les tranches de revenu les plus basses. La raison en est le grand nombre d'aéroports asiatiques présents dans la liste (Chine, Inde, Philippines). Dans ces pays, le revenu national par habitant est faible, ce qui contribue à l'asymétrie du graphique. Une proportion significative du jeu de données se situe entre 20 000 et 60 000, comme le montrent les barres les plus hautes. En revanche, très peu d'observations dépassent la tranche des 80 000, ce qui met en évidence une disparité. Cela suggère que la majorité des entités du jeu de données appartiennent à des pays ou régions ayant des revenus nationaux modestes, tandis qu'une minorité représente des économies à revenu élevé.
+
 ```{r}
 boxplot(data_for_pca$runway_length_ft, main="Distribution Runway Length", ylab="Runway Length (ft)")
 ```
 ```{r}
 boxplot(airports$runway_length_ft, main="Distribution Runway Length", ylab="Runway Length (ft)")
 ```
+La comparaison des longueurs de pistes met en évidence une nette disparité entre les grands aéroports et les petites pistes d’aviation. Les 50 principaux aéroports disposent de pistes nettement plus longues et plus homogènes, avec une médiane autour de 11 000 pieds, reflétant leur capacité à accueillir de grands avions comme les avions gros-porteurs (. En revanche, l’ensemble des 75 052 aéroports montre que la plupart des pistes sont beaucoup plus courtes, avec une médiane inférieure à 5 000 pieds, représentant des petits aérodromes régionaux, privés ou ruraux. Cependant, ce dataset inclut également des valeurs extrêmes, avec des pistes dépassant les 30 000 pieds, correspondant aux grands aéroports internationaux. Dans l’ensemble, la distribution est fortement asymétrique, soulignant la différence entre les petites pistes et quelques grands hubs internationaux.
 
-```{r}
-library(ggplot2)
-ggplot(data_with_passengers, aes(x=type, y=National.income)) +
-  geom_boxplot() +
-  labs(title="National Income by Airport Type", x="Airport Type", y="National Income") +
-  scale_y_continuous(labels=scales::comma)
-
-
-```
 ```{r, echo=FALSE}
 install.packages("Factoshiny")
 install.packages("FactoInvestigate")
@@ -533,6 +517,8 @@ R <- cor(pca_data_scaled) #matrice des correlation
 corrplot::corrplot(R, type = "upper", method = "square")
 
 ```
+La matrice de corrélation montre une relation positive forte entre le revenu national et le nombre de passagers, ce qui suggère que les aéroports avec un trafic de passagers plus élevé génèrent davantage de revenus. La longueur des pistes et la largeur des pistes sont fortement corrélées entre elles, mais n’ont que peu ou pas de relation avec le revenu national ou le trafic de passagers. Cela indique que, bien que les dimensions des pistes soient liées entre elles, elles n’influencent pas directement les revenus ou le flux de passagers. Globalement, le nombre de passagers semble être le principal moteur du revenu national pour les aéroports.
+
 ```{r,echo=FALSE}
 install.packages("FactoMineR")
 library(FactoMineR)
@@ -543,6 +529,9 @@ res_pca <- PCA(X = pca_data_scaled,
 plot.PCA(res_pca, axes = c(1,2), choix = "ind")
 
 ```
+Le graphique des individus illustre la répartition des observations en fonction de ces composantes principales. Les points situés dans le quadrant supérieur droit, comme 27 (Emirats Arabes Unis) et 38 (Singapour), représentent des nations riches avec des infrastructures avancées et un trafic passagers élevé, reflétant la corrélation positive entre ces variables. En revanche, des observations comme 6 et 18, situées dans le quadrant supérieur gauche, correspondent aux États Unis ayant un revenu modéré mais des infrastructures aéroportuaires atypiques qui s’écartent de la tendance générale. De manière similaire, des points comme 43 (La Chine) et 32 (Brésil) dans le quadrant inférieur droit représentent les pays avec des infrastructures importantes mais des volumes de passagers faibles.
+
+
 ```{r, echo=FALSE}
 install.packages("FactoMineR")
 library(FactoMineR)
@@ -551,10 +540,14 @@ res_pca <- PCA(X = pca_data_scaled,
                graph = FALSE)
 plot.PCA(res_pca, axes = c(1,2), choix = "var")
 ```
+L’alignement de “National.income” avec passengers sur Dim 1 met en évidence une forte corrélation positive entre la richesse d’un pays et la demande de transport aérien. En revanche, les vecteurs représentant la longueur et la largeur des pistes sont étroitement groupés et orientés principalement sur Dim 2, ce qui suggère que les caractéristiques physiques des infrastructures sont interdépendantes mais influencées par des facteurs ne dépendant pas uniquement du revenu national. Cette séparation entre le trafic passagers lié au revenu et les caractéristiques physiques des infrastructures implique que, bien que les pays riches investissent généralement dans des aéroports plus grands et mieux équipés, l’expansion des infrastructures n’est pas toujours proportionnelle aux niveaux de revenu.
+
 ```{r,echo=FALSE}
 res_pca$eig
 barplot(res_pca$eig[,1])
 ```
+L'histogramme des valeurs propres montre la contribution des quatre composantes principales (comp 1, comp 2, comp 3 et comp 4) à l’explication de la variance dans le jeu de données. La composante 1 capture la majeure partie de la variance, révélant les principales structures des données (comme le revenu national, le volume de passagers ou les dimensions des pistes). La composante 2 contribue également de manière significative, bien qu’à un degré moindre, en expliquant des variations complémentaires. En revanche, les composantes 3 et 4 ont des contributions nettement plus faibles, indiquant qu’elles expliquent des variations mineures. Cela suggère que les deux premières composantes suffisent pour représenter la majorité des informations du jeu de données tout en simplifiant l’analyse et la visualisation.
+
 # **Source**
 
 https://www.kaggle.com/datasets/danishjmeo/world-airports-data
