--- a/R-markdown- world_airport/R-markdown- world_airport.Rmd
+++ b/R-markdown- world_airport/R-markdown- world_airport.Rmd
@@ -16,7 +16,7 @@ email:
   - nikita.pomozov@etudiant.univ-reims.fr
 
 date: "`r format(Sys.time(), '%d %B %Y')`"
-abstract: "La problematique est d'qpprehender l'impact de la situation geographique et du revenu national sur les infrastructures aeroportuaires. A ce niveau, il est question d'etudier les choix des differnts pays dans le developpement des imfrastructures aeroportuaires "
+abstract: "La problematique est d'apprehender l'impact du revenu national sur les infrastructures aeroportuaires ainsi que les choix des differents pays dans le developpement des infrastructures aeroportuaires "
 
 keywords:
   - Schtroumpf
@@ -47,14 +47,67 @@ link-citations: yes
 #**Introduction**
 
 Les aéroports jouent un rôle central dans le transport aérien mondial, facilitant les échanges internationaux, le tourisme, les affaires et le commerce. En tant qu'infrastructures stratégiques, leur gestion et leur développement sont essentiels pour les économies locales et mondiales. Cette étude se concentre sur une base de données des aéroports du monde, qui réunit des informations détaillées sur la localisation, le type et les caractéristiques des aéroports répartis à travers différents pays.
-À travers cette analyse, nous explorerons des variables clés telles que le type d'aéroport (international, national, hélicoptère, etc.), les codes ISO des pays et leur répartition géographique d'une part avec la methode d'AFC et de l'autre part, nous allons etudier les variables comme  le revenu national(qu'on a récuperée sur une autre base de donnée puis on l'a fusionné avec la presente base de donnée),les passagers, les longueurs des pistes ainsi que les largeurs des pistes avec la methode de l'ACP. La problèmatique est de comprendre le choix des pays dans la construction des infrastructures aéroportuaires. Cela nous permettra de comprendre si les pays les plus riches investissent davantage dans les aéroports et si cela se traduit par une augmentation du nombre des passagers.
+À travers cette analyse, nous explorerons des variables clés telles que le type d'aéroport (grands, petits, moyens, héliports , etc.), les codes ISO des pays d'une part avec la methode d'AFC pour comprendre les choix des pays dans le developpment des infrastructures aroportuaires et de l'autre part, nous allons etudier les variables comme  le revenu national(qu'on a récuperée sur une autre base de donnée puis on l'a fusionné avec la presente base de donnée),les passagers, les longueurs des pistes ainsi que les largeurs des pistes avec la methode de l'ACP pour evaluer l'impact des revenus nationaux sur le developpemt de ces infrastructures. La problèmatique est de comprendre le choix des pays dans la construction des infrastructures aéroportuaires mais egalement l'impact des revenus nationaux dans la mise en oeuvre des constructions de ces infrastructures. Cela nous permettra de comprendre si les pays les plus riches investissent davantage dans les aéroports et si cela se traduit par une augmentation du nombre des passagers.
 
 
-# ** Prémière partie: Application de l'AFC**
+#**Section 1: les choix des pays dans le developpement des infrastructures**
 
-La première partie de notre projet concerne l'analyse descriptive. cette analyse descriptive va nous permettre de résumer de façon simple et concise l'ensemble des
+Le choix des pays dans le developpemt des infrastructures aeroportuaires depend de plusieurs facteurs qui peuvent etre liés à l'economie, la politique, la geopolitique mais aussi pour des raisons purement sociaux. 
+  Les pays développés ou à revenu élevé investissent généralement massivement dans leurs infrastructures aéroportuaires en raison de leur forte demande de transport aérien et de leur rôle central dans le commerce mondial. Par exemple, des pays comme la Chine, d'après les resultats de nos analyses, possède un grand nombre des moyens aéroports mais aussi des grands aéroports(moins importants que les moyens) pour répondre à ses besoins internes et internationaux en matière de transport, stimulés par sa taille, sa population, son développement économique, ses ambitions commerciales et ses politiques de décentralisation. Ces facteurs se combinent pour expliquer pourquoi la Chine est dotée de nombreux aéroports, tant pour les passagers que pour le fret aérien.
+  Les choix des pays comme le Canada sont liés aux raisons géographiques. Ces infrastructures sont essentielles pour relier les régions éloignées et faciliter les déplacements internes.Le nombre important d'aéroports fermés et l'utilisation des hydravions au Canada peuvent être attribués à la géographie vaste et diversifiée du pays, à son climat rigoureux, à la dispersion de sa population dans des zones isolées, et à des considérations économiques et pratiques. Les hydravions offrent une solution flexible et pratique pour desservir des régions qui seraient autrement difficiles d'accès par des infrastructures aéroportuaires traditionnelles. Les aéroports fermés, quant à eux, reflètent la baisse de la demande pour des installations dans des zones peu peuplées et éloignées. C'est l'exemple de la Russie ou l'Australie qui dans notre n'avaient pas pesé soit à cause de la non prise en compte d'un grand nombre de leurs aeroports soit à leurs faibles proportions comparées à celle du Canada.
+  Nous avons egalement des pays qui ont developpé un grand nombre d'heliports et des petits aeroports en l'occurence le Japon et la Coree du Sud.ces infrastructures sont également principalement développées pour des raisons civiles et économiques, mais il y a aussi des considérations militaires indirectes.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# **Section 2: L'impact des revenus nationaux sur les infrastructures aeroportuaires**
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
+# ** Conclusion **
+
+
+
+
+# **Annexe**
+
+L'AFC (Analyse Factorielle des Correspondances) est une méthode statistique exploratoire utilisée pour analyser des tableaux de contingence, généralement dans le cadre de variables qualitatives. Cela nous permet de visualiser et d'interpréter les relations entre les lignes et les colonnes d'un tableau de contingence.Dans notre cas,nous allons analyser le tableau de contingence avec les differents pays representés en ligne et les types d'aeroports en colonne.
+La première partie de notre methode AFC concerne l'analyse descriptive. cette analyse descriptive va nous permettre de résumer de façon simple et concise l'ensemble des
 données. 
-De ce fait, nous allons charger les données avec la commande suivante:
 
 ```{r, echo = FALSE}
 # Chargement des données
@@ -62,16 +115,11 @@ data <- read.csv("C:/Users/MGI/Desktop/projet-analysis-homework/World_Airports.c
 
 ```
 
-## **Section 1: Analyse descriptive**
-
-### **Section 1-1: Analyse Univariée**
-
-#### **Section  1-1-1: Statistiques descriptives**
 
 L'analyse univariée se concentre sur l'étude d'une seule variable à la fois, qu'elle soit quantitative ou qualitative. L'objectif de cette analyse est de décrire les caractéristiques de la variable et de comprendre sa distribution. Elle permet de donner une première idée de la structure des données avant d'aller plus loin dans l'analyse bivariée ou multivariée.
 
 
-```{r tableex, message = FALSE}
+```{r tableex, message = FALSE, echo=FALSE}
 
 library(knitr)
 
@@ -83,10 +131,6 @@ kable(summary_stats, format = "latex", caption = "Tableau des statistiques descr
 
 
 ```
-
-
-Ces statistiques nous donnent une idée sur les variables qui ont des valeurs 
- manquantes.
 
 
 ```{r, echo=FALSE}
@@ -117,10 +161,10 @@ kable(missing_values, format = "latex",
                 0                 0             64383             37241 
   runway_width_ft    runway_surface    runway_lighted     runway_closed 
             39483                 0             37062             37062 
-Les resultats montrent que presque toutes les variables n'ont pas de valeurs manquantes à l'exception de X,Y,frequency, runway_length_ft, runway_width_ft, runway_lighted, runway_closed.
+Les resultats montrent que presque toutes les variables n'ont pas de valeurs manquantes à l'exception de X,Y,frequency, runway_length_ft, runway_width_ft, runway_lighted, runway_closed. Pour notre part, nous nous attarderons sur les variables comme 
 C
  
-```{r} 
+```{r,echo=FALSE} 
 table(data$type)
 
 ```
@@ -128,10 +172,9 @@ balloonport         closed       heliport  large_airport medium_airport
             45          10164          19080            464           4747 
  seaplane_base  small_airport 
           1133          39419 
+la première variable comporte sept types d'aeroports. le Nombre d'occurence de chaque type d'aeroports varie d'un pays à un autre en fonction des choix d'orientations de ces derniers. Pour des pays qui ont des penchants commerciaux ont tendance à developper les petits, moyens et grands aeroports contrairement aux pays qui ont des priorités differentes.
 
 
-
-### ** Section 1-1-2: les graphes**
 
 
 ```{r, echo=FALSE}
@@ -152,9 +195,9 @@ barplot(frequence_type,
         xlab = "Type", 
         ylab = "Fréquence du type")
 ```
+
 Ce graphique nous renseigne sur la frequence des differents types d'aeroports.
 les Small_airport sont plus nombreux et represente la plus grande partie de notre base de données.Ensuite, viennent les heliports avec une proportion moins importante. 
-
 
 ```{r, echo = FALSE, eval = TRUE}
 # Diagramme en barres pour 'iso_country' (pays)
@@ -166,16 +209,6 @@ barplot(frequence_iso_country,
 
 ```
 A ce niveau, on constate que les aerports americains apparaissent trop souvent avec plus de 25OOO aeroports. Par contre, les autres pays ont une frequence comprise entre 0 et 5000.
-
-
-## **Section 1-2: l'Analyse Bivariée**
-
-
-L'analyse bivariée est une methode statistique utilisée pour examiner relation entre deux variables. Dans ce cas, nous pourrons etudier la relation entre le "type" et "iso_country".
-
-
-### **Section 1-2-1 : le test Khi-carreé(Person)**
-
 
 ```{r setupcolours, eval = TRUE, echo = FALSE}
 urcalightbrown <- "#D1AD55"
@@ -193,19 +226,19 @@ sand <- "#FED976"
 shadedpurple <- "#CD7FC5"
 ```
 
+L'analyse bivariée est une methode statistique utilisée pour examiner relation entre deux variables. Dans ce cas, nous pourrons etudier la relation entre le "type" et "iso_country".
 
-
-```{r setup, echo=FALSE}
+```{r,echo=FALSE}
+# application de l'AFC sur tableau_contingence_is_no
+library(FactoMineR)
+library(Factoshiny)
+library(tidyverse)
 library(dplyr)
 library(tidyr)
 library(ggplot2)
 library(corrplot)
-install.packages("urcadown")
-library(urcadown)
 
-donnee_temporaire <- data %>% select(type, iso_country)
-
-# Création du tableau de contingence
+# Création du tableau de contingence (avec 'type' comme colonnes et 'iso_country' comme lignes)
 tableau_contingence <- donnee_temporaire %>%
   count(type, iso_country) %>%
   spread(key = type, value = n, fill = 0)
@@ -214,80 +247,59 @@ tableau_contingence <- donnee_temporaire %>%
 # Nous excluons la colonne iso_country
 matrice_corr <- cor(tableau_contingence[, -1], method = "pearson")
 
-# Créer un tableau de couleurs avec des noms et des codes hexadécimaux
-tibble(`Nom couleur` = c("urcalightbrown", "urcamediumbrown", "urcaheavybrown",
-                         "urcalightblue", "urcamediumblue", "urcaheavyblue",
-                         "senolive", "sendarkgreen", "senlightgreen",
-                         "darkpink", "clay", "sand", "shadedpurple"),
-       `Code hexa` = c(urcalightbrown, urcamediumbrown, urcaheavybrown,
-                       urcalightblue, urcamediumblue, urcaheavyblue,
-                       senolive, sendarkgreen, senlightgreen,
-                       darkpink, clay, sand, shadedpurple),
-       `Code RGB` = lapply(`Code hexa`, hexa2rgb)
-       ) -> tib_colours
-
-# Définir une palette de couleurs pour le graphique de la corrélation
-color_palette <- c(urcalightbrown, urcamediumbrown, urcaheavybrown,
-                   urcalightblue, urcamediumblue, urcaheavyblue,
-                   senolive, sendarkgreen, senlightgreen,
-                   darkpink, clay, sand, shadedpurple)
-
-# Utiliser corrplot pour générer la matrice de corrélation avec une palette de couleurs personnalisée
+# Affichage de la matrice de corrélation avec corrplot
 corrplot(matrice_corr, method = "color", type = "full", 
-         col = colorRampPalette(color_palette)(200),  # Utilisation de la palette personnalisée
+         col = colorRampPalette(c("white", "blue"))(200),
          title = "Matrice de Corrélation entre les Types d'Aéroports",
          addCoef.col = "black")  # Ajouter les coefficients de corrélation dans le graphique
+  graphique
 ```
-
-
-
-```{r, echo=FALSE}
+On constate une forte correlation entre les grands, les petits et les moyens aeroports. Cependant, les grands aeroports ne sont pas trop correlés avec les seaplane_airports, les ballonports, les heliports et les aeroports fermés qui sont trés corrélés entre eux. cette analyse de la matrice de correlation nous indique qu'il est possible de creer de groupe en fonction de la correlation entre les types d'aeroports. 
+```{r}
 # Tableau de contingence (tableau croisé)
 tableau_croise <- table(data$type, data$iso_country)
 
 # Test du chi-carré
 chi2_test <- chisq.test(tableau_croise)
 chi2_test
-
 ```
+
 Etant donné que la p-value est inferieure à 0.05, nous rejetons l'hypothése nulle. Cela signifie qu'il existe une relation significative entre les deux variables qualitatives que nous allons tester.
 
-
-### **Section 1-2-2: le Test de Fisher**
-
-
-```{r, echo=FALSE}
+```{r}
 # Test exact de Fisher avec approximation via Monte Carlo
 fisher_test_approx <- fisher.test(tableau_croise, simulate.p.value = TRUE, B = 10000)
 fisher_test_approx
-
 ```
+
 Cela signifie que le test de Fisher teste une association bilatérale, c'est-à-dire qu'il teste si les deux variables sont significativement liées dans n'importe quelle direction, sans spécifier a priori une direction particulière pour l'association.
 
-
-### **Section 1-2-3: Test de Cramér's**
-
-
-```{r, echo = FALSE}
+```{r}
 # Charger le package vcd
 library(vcd)
 # Calcul de Cramér's V
 assoc_result <- assocstats(table(data$type, data$iso_country))
 assoc_result
 ```
-Nous constatons encore une p-value faible, ce qui signifie qu'il existe une forte correlation entre les deux variables qualitatives. De plus, les variables "contigency coeff" et "Cramer's V" indiquent une association moderée.  
 
+Nous constatons encore une p-value faible, ce qui signifie qu'il existe une forte correlation entre les deux variables qualitatives. De plus, les variables "contigency coeff" et "Cramer's V" indiquent une association moderée.
 
-## ** Section 2: Application de L'AFC**
+```{r,echo=FALSE}
+# Test du Khi-deux pour l'indépendance
+chisq.test(tableau_contingence_no_iso) -> res_chisq
+res_chisq$statistic  # Affichage du statistic du test Khi-deux
 
-L'AFC (Analyse Factorielle des Correspondances) est une méthode statistique exploratoire utilisée pour analyser des tableaux de contingence, généralement dans le cadre de variables qualitatives. Cela nous permet de visualiser et d'interpréter les relations entre les lignes et les colonnes d'un tableau de contingence.Dans notre cas,nous allons analyser le tableau de contingence avec les differents pays representés en ligne et les types d'aeroports en colonne.
+# Définition de 'children' comme étant les valeurs attendues du test Khi-deux
+children <- res_chisq$expected
 
+# Calcul de l'inertie du nuage des profils
+inertie <- res_chisq$statistic / sum(children) + 1
+inertie
 
-### **Section 2-1: Representation des profils lignes**
+```
+Avec une statistique χ² de 30863.32, et une p-value proche de 0, vous pouvez conclure qu'il y a une forte association entre les deux variables catégorielles étudiées. Cette présence d'association nous permet d'expliquer une des variables en fonction de l'autre par consequent il ameliore la comprehension.
 
-
-```{r, echo=FALSE}
-
+```{r,echo=FALSE}
 # Charger les bibliothèques nécessaires
 library(dplyr)
 library(tidyr)
@@ -317,13 +329,10 @@ apply(PL, 1, sum)
 barplot(height = t(PL), beside = FALSE, legend.text = colnames(PL))
 
 ```
+A ce niveau, nous avons un graphique qui indique la repartition des pays en fonction des types d'aeroports. Cependant, il est difficile pour nous d'analyser ce graphique en raison du nombre élèvé des pays. Notons qu'il y'a une forte apparition des small_airports vers le haut et une forte occurence des ballonporte et closed vers le bas.
+une autre solution est de regrouper les pays qui ont des similarités pour les reduire et effectuer des bonnes analyses.
 
-
-
-### **Section  2-2: Representation des profils colonnes**
-
-
-```{r, echo=FALSE}
+```{r}
 #calcul des profils colonnes
 PC <- prop.table(as.matrix(tableau_contingence_no_iso), margin = 2)
 
@@ -331,33 +340,9 @@ PC <- prop.table(as.matrix(tableau_contingence_no_iso), margin = 2)
 barplot(height = PC, beside = FALSE, legend.text = rownames(PC))
 ```
 
-
-
-### **Section 2-3: Test d'independance**
-
+Ce barplot des profils lignes indique le repartition des chaque type d'aeroports en fonction du pays. on remarque un nombre limité des pays possédent des ballonports, des heliports et des seaplanes. Cependant, pour les autres types d'aeroports, l'occurence est presente dans presque tous les pays. Par ailleurs, nous notons aussi que certains pays ont une frequence plus forte que celle des autres pays pour les types d'aeroports les plus frequents. 
 
 ```{r,echo=FALSE}
-# Test du Khi-deux pour l'indépendance
-chisq.test(tableau_contingence_no_iso) -> res_chisq
-res_chisq$statistic  # Affichage du statistic du test Khi-deux
-
-# Définition de 'children' comme étant les valeurs attendues du test Khi-deux
-children <- res_chisq$expected
-
-# Calcul de l'inertie du nuage des profils
-inertie <- res_chisq$statistic / sum(children) + 1
-inertie
-
-```
-Avec une statistique χ² de 30863.32, et une p-value proche de 0, vous pouvez conclure qu'il y a une forte association entre les deux variables catégorielles étudiées. Cette présence d'association nous permet d'expliquer une des variables en fonction de l'autre par consequent il ameliore la comprehension.
-
-
-### ** Section 2-4: Les valeurs propres** 
-
-#### ** Section 2-4-1: Resultats des valeurs propres**
-
-
-```{r, echo=FALSE}
 #recherche des valeurs propres
 library("FactoMineR")
 res_afc <- CA(X = tableau_contingence_no_iso, ncp = 7,
@@ -365,13 +350,8 @@ res_afc <- CA(X = tableau_contingence_no_iso, ncp = 7,
 res_afc
 res_afc$eig
 ```
-Ces resultats nous donnent des informations sur les valeurs propres ainsi que la variance expliquée qui n'est rien d'autres que l'explication de la variabilité des données observées.
 
-
-#### ** Section 2-4-2: L'histogramme des valeurs propres**
-
-
-```{r, echo=FALSE}
+```{r,echo=FALSE}
 library(dplyr)
 library(tidyr)
 library(ggplot2)
@@ -405,107 +385,45 @@ barplot(valeurs_propres[, 1],
         xlab = "Composantes", 
         border = "white")
 ```
-
+Ces resultats nous donnent des informations sur les valeurs propres ainsi que la variance expliquée qui n'est rien d'autres que l'explication de la variabilité des données observées.
 Regle du coude : on retient  3 valeurs propres qui representent 88,41% de l'inertie. Cela veut dire que les trois valeurs expliquent à elles seules la plus grande partie de l'information. 
 
-### ** Section 2-5: la projection des nuages des profils lignes et colonnes **
-
-La projection des nuages des profils est une technique couramment utilisée dans l'analyse des correspondances (AFC) et d'autres méthodes multivariées pour visualiser les relations entre des objets ou des profils dans un espace réduit à deux dimensions. Cela permet de mieux comprendre les structures et associations dans les données.
-
-#### ** Section 2-5-1: La dimension 1 et 2**
-
-A ce niveau, nous nous focaliserons sur les deux premiers axes pour analyser les données. les deux dimensions expliquent 69% de l'information(variance exliqueé).
-
-```{r, echo=FALSE}
+```{r,echo=FALSE}
 # projection des nuages des profils lignes sur le plan principal
 plot.CA(x = res_afc, choix = "CA", axes = c(1,2), cex = 0.5)
 ```
-les types d'aeroports qui sont bien representés sont les héliports(heliport) et les petits aéroports(small_airport) sur le premier axe.En plus, l'heliport contribue en grande partie à la construction du premier axe sans oublier la contribution du small airoport. Ce premier axe oppose les heliports aux small_airports. sur cet axe, les pays comme le Japon et la corée du Sud sont bien representés et contribuent en grande partie à la construction du premier axe. Les pays comme le Japon et la Corée du Sud peuvent avoir un nombre plus élevé d'héliports en raison de facteurs combinés tels que leur géographie, leur développement économique et industriel, leurs besoins en termes de transport, leur usage militaire, et la gestion des risques naturels.
-  Sur le second axe,on a une opposition entre les petits aeroports, les heliports d'une part et les moyens aéroports, les grands aéroports d'autre part. ces deux derniers contribuent à la construction du deuxieme axe meme si les grands aeroports n'ont pas un poids important dans la construction du deuxième axe. sur cet axe, la chine est bien representée et contribue à la construction du second axe.La Chine possède un grand nombre des moyens aéroports mais aussi des grands aéroports(moins importants que les moyens) pour répondre à ses besoins internes et internationaux en matière de transport, stimulés par sa taille, sa population, son développement économique, ses ambitions commerciales et ses politiques de décentralisation. Ces facteurs se combinent pour expliquer pourquoi la Chine est dotée de nombreux aéroports, tant pour les passagers que pour le fret aérien.
+A ce niveau, nous nous focaliserons sur les deux premiers axes pour analyser les données. les deux dimensions expliquent 69% de l'information(variance exliqueé).
 
-
-#### ** Section 2-5-2: La dimension 1 et 3 **
-
-on s'attardera sur les dimensions 1 et 3 pour effectuer notre analyse. Nous pouvons alors comprendre l'évolution de nos données avec une vision panoramique et differente à la precedente.En effet, d'autres variables qui n'ont pas eu d'effets sur les autres dimensions peuvent s'averer importantes. 
-
+  les types d'aeroports qui sont bien representés sont les héliports(heliport) et les petits aéroports(small_airport) sur le premier axe.En plus, l'heliport contribue en grande partie à la construction du premier axe sans oublier la contribution du small airoport. Ce premier axe oppose les heliports aux small_airports. sur cet axe, les pays comme le Japon et la corée du Sud sont bien representés et contribuent en grande partie à la construction du premier axe.
+  
+  Sur le second axe,on a une opposition entre les petits aeroports, les heliports d'une part et les moyens aéroports, les grands aéroports d'autre part. ces deux derniers contribuent à la construction du deuxieme axe meme si les grands aeroports n'ont pas un poids important dans la construction du deuxième axe. sur cet axe, la chine est bien representée et contribue à la construction du second axe.
 ```{r,echo=FALSE}
 # projection des nuages des profils lignes sur le plan principal
 plot.CA(x = res_afc, choix = "CA", axes = c(1,3), cex = 0.5)
 ```
-Le troisième axe oppose les autres types d'aeroports aux hydravions(seaplane_base), les aéroports fermés(closed). Ces aéroports sont bien representés et contribuent enormement à la construction du troisième axe. Le Canada contribue en grande partie à la construction de cet axe. Par consequent, nous pouvons conclure que le Canada a un nombre important des hydravions et des fermés.Le nombre important d'aéroports fermés et l'utilisation des hydravions au Canada peuvent être attribués à la géographie vaste et diversifiée du pays, à son climat rigoureux, à la dispersion de sa population dans des zones isolées, et à des considérations économiques et pratiques. Les hydravions offrent une solution flexible et pratique pour desservir des régions qui seraient autrement difficiles d'accès par des infrastructures aéroportuaires traditionnelles. Les aéroports fermés, quant à eux, reflètent la baisse de la demande pour des installations dans des zones peu peuplées et éloignées.
 
-#### ** Section 2-5-3: La dimension 2 et 3**
+on s'attardera sur les dimensions 1 et 3 pour effectuer notre analyse. Nous pouvons alors comprendre l'évolution de nos données avec une vision panoramique et differente à la precedente.En effet, d'autres variables qui n'ont pas eu d'effets sur les autres dimensions peuvent s'averer importantes. 
 
-En fin, nous nous attellerons à l'analyse de ces données qualitatives en s'attardant sur la dimension 2 et 3.
+Le troisième axe oppose les autres types d'aeroports aux hydravions(seaplane_base) et aux aéroports fermés(closed). Ces aéroports sont bien representés et contribuent enormement à la construction du troisième axe. Le Canada contribue en grande partie à la construction de cet axe. Par consequent, nous pouvons conclure que le Canada a un nombre important des hydravions et des fermés.
 
-```{r, echo=FALSE}
+```{r,echo=FALSE}
 # projection des nuages des profils lignes sur le plan principal
 plot.CA(x = res_afc, choix = "CA", axes = c(2,3), cex = 0.5)
 ```
-
-Nous remarquons à ce niveau que l'analyse se focalise sur la Chine qui explique le deuxième axe d'une part et le Canada qui exlique le troisième axe. Ceci nous permet de comparer les politiques de ces deux pays en terme d'infrastructures aéroportuaires. La politique aéroportuaire du Canada et de la Chine répond à des besoins et à des contextes très différents. Le Canada privilégie une approche flexible et régionale, adaptée à son vaste territoire et aux particularités géographiques, en utilisant des solutions comme les hydravions pour les zones isolées. La Chine, quant à elle, adopte une approche ambitieuse et centralisée pour développer ses infrastructures, en réponse à une forte demande intérieure et internationale, en se concentrant sur la construction rapide de nouveaux aéroports et la modernisation des infrastructures existantes pour soutenir sa croissance économique. 
-
-# ** Deuxième Partie: Methode de l'ACP **
-
-## ** Section 1: Analyse Descriptive **
+Nous remarquons à ce niveau que l'analyse se focalise sur le deuxième et troisième axe. Nous notons que la Chine explique en grande partie le deuxième axe d'une part et le Canada qui contribue fortement dans l'explication du troisième axe. Ceci nous permet de comparer les politiques de ces deux pays en terme d'infrastructures aéroportuaires. La politique aéroportuaire du Canada et de la Chine répond à des besoins et à des contextes très différents. Le Canada privilégie une approche flexible et régionale, adaptée à son vaste territoire et aux particularités géographiques, en utilisant des solutions comme les hydravions pour les zones isolées. La Chine, quant à elle, adopte une approche ambitieuse et centralisée pour développer ses infrastructures, en réponse à une forte demande intérieure et internationale, en se concentrant sur la construction rapide de nouveaux aéroports et la modernisation des infrastructures existantes pour soutenir sa croissance économique. 
 
 
-### ** Section 1-1: Analyse Univariée **
-
-Pour l'analyse ACP, nous avons décidé de combiner plusieurs ensembles de données. Le premier est l'ensemble de données « Airports », qui contient des informations sur tous les aéroports du monde. Le second contient des informations sur les codes pays ISO afin d'utiliser cette variable comme clé pour joindre les data sets. Le troisième ensemble de données contient des informations sur le revenu national par habitant de tous les pays. Le quatrième ensemble de données contient des informations sur le trafic annuel de passagers. Cependant, il est important de mentionner que nous n'avons pas pu obtenir de données sur tous les aéroports car nous aurions dû payer. Nous avons donc ajouté des informations sur le trafic provenant de Wikipedia, qui contient des informations sur les 50 principaux aéroports du monde. 
-
-Après avoir combiné et reformaté tous les ensembles de données, nous avons décidé d'effectuer une analyse ACP à partir de ces variables :
-« National.income », “runway_length_ft”, “runway_width_ft”, et “passengers”. En utilisant ces variables, nous voulions explorer la relation entre le revenu national et les infrastructures aéroportuaires. En outre, nous avons essayé de comprendre si les pays les plus riches investissent davantage dans les aéroports et si cela se traduit par un plus grand nombre de passagers.
-
-
-L'analyse univariée de la variable National Income révèle une distribution fortement asymétrique, avec la majorité des observations concentrées dans les tranches de revenu les plus basses. La raison en est le grand nombre d'aéroports asiatiques présents dans la liste (Chine, Inde, Philippines). Dans ces pays, le revenu national par habitant est faible, ce qui contribue à l'asymétrie du graphique. Une proportion significative du jeu de données se situe entre 20 000 et 60 000, comme le montrent les barres les plus hautes. En revanche, très peu d'observations dépassent la tranche des 80 000, ce qui met en évidence une disparité. Cela suggère que la majorité des entités du jeu de données appartiennent à des pays ou régions ayant des revenus nationaux modestes, tandis qu'une minorité représente des économies à revenu élevé.
-
-
-
-La comparaison des longueurs de pistes met en évidence une nette disparité entre les grands aéroports et les petites pistes d’aviation. Les 50 principaux aéroports disposent de pistes nettement plus longues et plus homogènes, avec une médiane autour de 11 000 pieds, reflétant leur capacité à accueillir de grands avions comme les avions gros-porteurs (Boxplot No.1). En revanche, l’ensemble des 75 052 aéroports montre que la plupart des pistes sont beaucoup plus courtes, avec une médiane inférieure à 5 000 pieds, représentant des petits aérodromes régionaux, privés ou ruraux (Boxplot No.2). Cependant, le dataset "Airports" inclut également des valeurs extrêmes, avec des pistes dépassant les 30 000 pieds, correspondant aux grands aéroports internationaux. Dans l’ensemble, la distribution est fortement asymétrique, soulignant la différence entre les petites pistes et quelques grands hubs internationaux.
-
-
-
-
-### ** Section 1-2: Analyse bivariée **
-
-
-
-
-## ** Section 2: Application de l'ACP **
 
 L'Analyse en Composantes Principales (ACP) est une méthode statistique utilisée pour analyser et réduire la dimensionnalité d'un jeu de données tout en préservant autant que possible l'information. Elle est souvent utilisée dans des contextes où les données sont de haute dimension, c'est-à-dire quand il y a de nombreuses variables (caractéristiques) qui peuvent être difficiles à analyser ou à visualiser.
 
-### ** Section 2-1: Graphique des individus **
-
-
-Le graphique des individus illustre la répartition des observations en fonction de ces composantes principales. Les points situés dans le quadrant supérieur droit, comme 27 (Emirats Arabes Unis) et 38 (Singapour), représentent probablement des nations riches avec des infrastructures avancées et un trafic passagers élevé, reflétant la corrélation positive entre ces variables. En revanche, des observations comme 6 et 18, situées dans le quadrant supérieur gauche, correspondent aux États Unis ayant un revenu modéré mais des infrastructures aéroportuaires atypiques qui s’écartent de la tendance générale. De manière similaire, des points comme 43 (La Chine) et 32 (Brésil) dans le quadrant inférieur droit représentent les pays avec des infrastructures importantes mais des volumes de passagers faibles, peut-être en raison d’une capacité sous-utilisée.
-
-### **Section 2-2: Graphique des variables**
-
-
-Le graphique des variables illustre visuellement ces relations. L’alignement de “National.income” avec passengers sur Dim 1 met en évidence une forte corrélation positive entre la richesse d’un pays et la demande de transport aérien. En revanche, les vecteurs représentant la longueur et la largeur des pistes sont étroitement groupés et orientés principalement sur Dim 2, ce qui suggère que les caractéristiques physiques des infrastructures sont interdépendantes mais influencées par des facteurs ne dépendant pas uniquement du revenu national. Cette séparation entre le trafic passagers lié au revenu et les caractéristiques physiques des infrastructures implique que, bien que les pays riches investissent généralement dans des aéroports plus grands et mieux équipés, l’expansion des infrastructures n’est pas toujours proportionnelle aux niveaux de revenu.
-
-Ces résultats confirment que le revenu national influence le développement des aéroports et la demande de transport aérien, mais ils mettent également en évidence une variabilité entre les pays. Par exemple, certains pays à revenu limité maintiennent des volumes de passagers relativement élevés, potentiellement en raison de leur rôle de hubs régionaux ou de leur dépendance au tourisme. D’autres disposent d’infrastructures avancées mais affichent un faible trafic passagers, suggérant des inefficacités ou une demande insuffisante.
-
-### ** Section 2-3: Histogramme des valeurs propres **
-
-
-L'histogramme des valeurs propres montre la contribution des quatre composantes principales (comp 1, comp 2, comp 3 et comp 4) à l’explication de la variance dans le jeu de données. La composante 1 capture la majeure partie de la variance, révélant les principales structures des données (comme le revenu national, le volume de passagers ou les dimensions des pistes). La composante 2 contribue également de manière significative, bien qu’à un degré moindre, en expliquant des variations complémentaires. En revanche, les composantes 3 et 4 ont des contributions nettement plus faibles, indiquant qu’elles expliquent des variations mineures. Cela suggère que les deux premières composantes suffisent pour représenter la majorité des informations du jeu de données tout en simplifiant l’analyse et la visualisation.
-
-
-# ** Conclusion **
-
-Les résultats de l’ACP soulignent une relation nuancée entre la richesse, les infrastructures et le transport aérien. Bien que les pays les plus riches investissent généralement dans des infrastructures aéroportuaires et connaissent des volumes de trafic plus élevés, les écarts par rapport à ce schéma, comme la présence d’observations atypiques, suggèrent l’influence d’autres facteurs. La localisation géographique, les politiques publiques, la connectivité aérienne ou la dépendance au tourisme pourraient tous contribuer à ces variations. Une étude approfondie de ces anomalies permettrait de mieux comprendre la dynamique complexe entre le développement économique, les infrastructures aéroportuaires et les mouvements de passagers.
-
-
-# **Annexe**
 ```{r,echo=FALSE}
 hist(data_for_pca$National.income, main="Distribution de National Income", xlab="National Income")
 ```
-```{r}
+`
+``{r}
 boxplot(data_for_pca$runway_length_ft, main="Distribution Runway Length", ylab="Runway Length (ft)")
 ```
+
 ```{r}
 boxplot(airports$runway_length_ft, main="Distribution Runway Length", ylab="Runway Length (ft)")
 ```
@@ -519,6 +437,7 @@ ggplot(data_with_passengers, aes(x=type, y=National.income)) +
 
 
 ```
+
 ```{r, echo=FALSE}
 install.packages("Factoshiny")
 install.packages("FactoInvestigate")
@@ -533,16 +452,19 @@ R <- cor(pca_data_scaled) #matrice des correlation
 corrplot::corrplot(R, type = "upper", method = "square")
 
 ```
+
 ```{r,echo=FALSE}
 install.packages("FactoMineR")
 library(FactoMineR)
 res_pca <- PCA(X = pca_data_scaled,
                scale.unit = TRUE, # On précise qu'on souhaite réaliser une ACP sur données réduites
                graph = FALSE)
+            
 # On peut représenter le résultat de l'acp par la suite
 plot.PCA(res_pca, axes = c(1,2), choix = "ind")
 
 ```
+
 ```{r, echo=FALSE}
 install.packages("FactoMineR")
 library(FactoMineR)
@@ -551,10 +473,13 @@ res_pca <- PCA(X = pca_data_scaled,
                graph = FALSE)
 plot.PCA(res_pca, axes = c(1,2), choix = "var")
 ```
+
 ```{r,echo=FALSE}
 res_pca$eig
 barplot(res_pca$eig[,1])
 ```
+
+
 # **Source**
 
 https://www.kaggle.com/datasets/danishjmeo/world-airports-data
